--- a/vscode/laslesvpn.html
+++ b/vscode/laslesvpn.html
@@ -13,6 +13,7 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/themify-icons/0.1.2/css/themify-icons.css">
     <link rel="stylesheet" href="../lib/css/laslesvpn.css" />
     <link rel="stylesheet" href="../lib/css/rubik.css" />
     <link rel="stylesheet" href="../lib/css/aos.css" />
@@ -481,9 +482,9 @@
             has unique features and has high security.
           </h1>
           <div class="ft--society__network">
-            <a href=""><img src="../img/ft-fb.png" alt="" /></a>
-            <a href=""><img src="../img/ft-tw.png" alt="" /></a>
-            <a href=""><img src="../img/ft-ig.png" alt="" /></a>
+            <div class="ft--ti"><a href=""><i class="ti-facebook"></i></a></div>
+            <div  class="ft--ti"><a href=""><i class="ti-instagram"></i></a></div>
+            <div  class="ft--ti"><a href=""><i class="ti-twitter-alt"></i></a></div>
           </div>
           <h3>©2020 Lasles<span>VPN</span></h3>
         </div>
